<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:orientation="vertical"
    tools:context="com.example.al_pc.administrationrecipes.Activities.CabinetAdministrationActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:background="@drawable/recipes"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/insert_ingredient"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/insert_ingredient"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/show_dishes"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/show_dishes"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/show_inquiries"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/show_inquiries"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/show_logs"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/show_logs"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/exit"/>

</LinearLayout>