<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginTop="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        app:cardCornerRadius="8dp">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/selector_dish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00ffffff"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="left">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/timeTB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time"
                android:textSize="20sp"
                android:inputType="textMultiLine"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/eventTB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/event"
                android:textSize="20sp"
                android:inputType="textMultiLine"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/userIdTB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/id"
                android:textSize="20sp"
                android:inputType="textMultiLine"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/userEmailTB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email"
                android:textSize="20sp"
                android:inputType="textMultiLine"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/userNicknameTB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nickname"
                android:textSize="20sp"
                android:inputType="textMultiLine"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/userCategoryTB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/users_category"
                android:textSize="20sp"
                android:inputType="textMultiLine"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>