<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginTop="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        app:cardCornerRadius="8dp">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/selector_dish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00ffffff"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"><LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/category"
                android:textSize="20sp"
                android:inputType="textMultiLine"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/name"
                android:textSize="20sp"
                android:inputType="textMultiLine"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/creater"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/nickname"
                android:textSize="20sp"
                android:inputType="textMultiLine"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/negativeBTN"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:background="@drawable/negative"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/positiveBTN"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:background="@drawable/positive"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>